src/test/resources/org/xmlcml/www/convention/simpleUnit/invalid/unitList-must-have-child-unit-2.cml
<cml:unitList convention="conventions:simpleUnit" xmlns:cml="http://www.xml-cml.org/schema" xmlns:conventions="http://www.xml-cml.org/convention/">
    <!-- not valid, a unitList must have at least
        one unit child -->
</cml:unitList>
